{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 303,
  "lineage": "fb424f43-ff8c-6592-8449-dc551db9aa71",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-18T06:05:50.456-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/teak-serenity-475107-e2/global/firewalls/allow-http-lb",
            "log_config": [],
            "name": "allow-http-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/networks/project-network",
            "params": [],
            "priority": 1000,
            "project": "teak-serenity-475107-e2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/firewalls/allow-http-lb",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "load-balancer"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-18T06:05:50.473-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/teak-serenity-475107-e2/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/networks/project-network",
            "params": [],
            "priority": 1000,
            "project": "teak-serenity-475107-e2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/firewalls/allow-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-10-18T06:05:50.437-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/teak-serenity-475107-e2/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/networks/project-network",
            "params": [],
            "priority": 1000,
            "project": "teak-serenity-475107-e2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "database",
              "load-balancer",
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "SEV_SNP_CAPABLE",
                  "SEV_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "TDX_CAPABLE",
                  "IDPF",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "SEV_LIVE_MIGRATABLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-121-18867-199-98",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/zones/us-central1-a/disks/nginx-load-balancer"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-10-18T06:06:37.260-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/teak-serenity-475107-e2/zones/us-central1-a/instances/nginx-load-balancer",
            "instance_id": "1881070106748792371",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "gce-container-declaration": "spec:\n  containers:\n    - name: nginx\n      image: nginx:1.27\n      command:\n        - sh\n        - -c\n        - |\n          cat \u003c\u003c'CONF' \u003e /etc/nginx/conf.d/default.conf\n          server {\n            listen 80;\n            location / {\n              proxy_pass http://10.128.0.3:8080;\n            }\n            location /healthz {\n              proxy_pass http://10.128.0.3:8080/healthz;\n            }\n            location [...]
            },
            "metadata_fingerprint": "Q2JuRYoz4hU=",
            "name": "nginx-load-balancer",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.59.217.117",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/networks/project-network",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/regions/us-central1/subnetworks/project-network",
                "subnetwork_project": "teak-serenity-475107-e2"
              }
            ],
            "project": "teak-serenity-475107-e2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/zones/us-central1-a/instances/nginx-load-balancer",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "load-balancer"
            ],
            "tags_fingerprint": "w6zZxj3jQ58=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_instance.postgres_database",
            "google_compute_instance.web_server",
            "google_compute_network.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "postgres_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "SEV_SNP_CAPABLE",
                  "SEV_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "TDX_CAPABLE",
                  "IDPF",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "SEV_LIVE_MIGRATABLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-121-18867-199-98",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/zones/us-central1-a/disks/postgres-database"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-10-18T06:05:53.096-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/teak-serenity-475107-e2/zones/us-central1-a/instances/postgres-database",
            "instance_id": "8114941272598130271",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "gce-container-declaration": "spec:\n  containers:\n    - name: postgres\n      image: postgres:15\n      env:\n        - name: POSTGRES_USER\n          value: appuser\n        - name: POSTGRES_PASSWORD\n          value: ChangeMe123!\n        - name: POSTGRES_DB\n          value: appdb\n      securityContext:\n        privileged: true\n      ports:\n        - name: db\n          hostPort: 5432\n          containerPort: 5432\n  restartPolicy: Always\n"
            },
            "metadata_fingerprint": "H0ZLXq7wl2Y=",
            "name": "postgres-database",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.29.229.106",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/networks/project-network",
                "network_ip": "10.128.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/regions/us-central1/subnetworks/project-network",
                "subnetwork_project": "teak-serenity-475107-e2"
              }
            ],
            "project": "teak-serenity-475107-e2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/zones/us-central1-a/instances/postgres-database",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "database"
            ],
            "tags_fingerprint": "w2VJJusIj3s=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "gce-container-declaration",
                  "type": "string"
                }
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "SEV_SNP_CAPABLE",
                  "SEV_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "TDX_CAPABLE",
                  "IDPF",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "SEV_LIVE_MIGRATABLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/cos-cloud/global/images/cos-stable-121-18867-199-98",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/zones/us-central1-a/disks/flask-web-server"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2025-10-18T06:06:14.757-07:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/teak-serenity-475107-e2/zones/us-central1-a/instances/flask-web-server",
            "instance_id": "6064548766233275945",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata": {
              "gce-container-declaration": "spec:\n  containers:\n    - name: flask-app\n      image: ghcr.io/radost5454/gcp-flask-app:latest\n      env:\n        - name: DB_HOST\n          value: 10.128.0.2\n        - name: DB_NAME\n          value: appdb\n        - name: DB_USER\n          value: appuser\n        - name: DB_PASS\n          value: ChangeMe123!\n        - name: DB_PORT\n          value: \"5432\"\n      securityContext:\n        privileged: true\n      ports:\n        - name: htt [...]
            },
            "metadata_fingerprint": "o27TwaqAywc=",
            "name": "flask-web-server",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.41.67.35",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/networks/project-network",
                "network_ip": "10.128.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/regions/us-central1/subnetworks/project-network",
                "subnetwork_project": "teak-serenity-475107-e2"
              }
            ],
            "project": "teak-serenity-475107-e2",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/zones/us-central1-a/instances/flask-web-server",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "web"
            ],
            "tags_fingerprint": "3d9fNIIa_10=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata"
              },
              {
                "type": "index",
                "value": {
                  "value": "gce-container-declaration",
                  "type": "string"
                }
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_instance.postgres_database",
            "google_compute_network.main_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/teak-serenity-475107-e2/global/networks/project-network",
            "mtu": 0,
            "name": "project-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "1260933733228097174",
            "numeric_id": "1260933733228097174",
            "project": "teak-serenity-475107-e2",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/teak-serenity-475107-e2/global/networks/project-network"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}